--- a/qml.qrc
+++ b/qml.qrc
@@ -74,5 +74,6 @@
         <file>img/imgCops/applicationForm.JPG</file>
         <file>img/imgCops/speedfire.jpg</file>
         <file>img/imgCops/speedfire.png</file>
+        <file>img/imgCops/logo_la.png</file>
     </qresource>
 </RCC>
