--- a/qml.qrc
+++ b/qml.qrc
@@ -75,5 +75,8 @@
         <file>img/imgCops/speedfire.jpg</file>
         <file>img/imgCops/speedfire.png</file>
         <file>img/imgCops/logo_la.png</file>
+        <file>img/imgCops/snipe.png</file>
+        <file>img/imgCops/123.png</file>
+        <file>img/imgCops/carte-la-gob---gp.jpg</file>
     </qresource>
 </RCC>
