--- a/qml.qrc
+++ b/qml.qrc
@@ -78,5 +78,12 @@
         <file>img/imgCops/snipe.png</file>
         <file>img/imgCops/123.png</file>
         <file>img/imgCops/carte-la-gob---gp.jpg</file>
+        <file>img/imgCops/irish_tricolour-1.jpg</file>
+        <file>img/imgCops/image-0.jpg</file>
+        <file>img/imgCops/image-1.jpg</file>
+        <file>img/imgCops/image-2.jpg</file>
+        <file>img/imgCops/image-3.jpg</file>
+        <file>img/imgCops/boxer1.jpg</file>
+        <file>img/imgCops/wanted_car.png</file>
     </qresource>
 </RCC>
